Add swagger 3
