# src/routes/user/profile.js
@@ -1,22 +1,28 @@
 import express from "express";
 import { UserController } from "../../controllers";
+import { multerUploader } from "../../helpers/uploader";
 import { joiValidator } from "../../middlewares";
 import { isLoggedIn } from "../../middlewares/auth";
 import { userSchema } from "../../validations";
 
 const router = express.Router();
 router.get("/", isLoggedIn, UserController.getUser);
-router.patch("/", isLoggedIn, UserController.updateUser);
+router.patch(
+  "/",
+  multerUploader.single("profilePic"),
+  isLoggedIn,
+  UserController.updateUser
+);
 router.delete("/", isLoggedIn, UserController.deleteUser);
 router.get(
   "/verification",
-  joiValidator(userSchema.email, "query"),
+  joiValidator(userSchema.id, "query"),
   UserController.getVerifyToken
 );
 router.patch("/verification", UserController.verifyProfile);
 router.get(
   "/passwordToken",
-  joiValidator(userSchema.email, "query"),
+  joiValidator(userSchema.id, "query"),
   UserController.getPasswordResetToken
 );
 router.patch("/passwordToken", UserController.getPasswordResetToken);
